syntax = "proto3";
package server;

message ServerInfo {
    string uuid = 1;
    string name = 2;
    string hostname = 3;
    string address = 4;
}
